--- a/pages/core-concepts.mdx
+++ b/pages/core-concepts.mdx
@@ -31,7 +31,7 @@ distributed separately.
 
 ### Distributor Fee
 
-The Ditributor Fee is the portion of a Split's balance that is earned in
+The Distributor Fee is the portion of a Split's balance that is earned in
 exchange for distributing the balance. This fee incentivizes third parties to
 pay the gas needed to distribute a Split's balance, since it creates an
 arbitrage opportunity (when the cost to distribute is lower than the fee
